@@ -1,5 +1,8 @@
 #!/usr/bin/python
+import os
+import unittest
 from doctest import DocFileSuite, ELLIPSIS
+from glob import glob
 
 from txjsonrpc.testing.suite import buildDoctestSuite
 
@@ -8,14 +11,16 @@ from txjsonrpc.testing.suite import buildDoctestSuite
 modules = [
 ]
 
-suites = [DocFileSuite("../docs/USAGE.txt", optionflags=ELLIPSIS)]
+files = glob("docs/specs/*.txt")
+files.append("docs/USAGE.txt")
+suites = []
+for file in files:
+    file = os.path.join("..", file)
+    suites.append(DocFileSuite(file, optionflags=ELLIPSIS))
 if modules:
     suites.append(buildDoctestSuite(modules))
 
 
 if __name__ == "__main__":
-    import unittest
     runner = unittest.TextTestRunner(verbosity=2)
     runner.run(unittest.TestSuite(suites))
-
-
