@@ -29,6 +29,8 @@ override.
 * Added missing deferred returns in two tests.
 * Added testing helper subpackage.
 * Added doctest runner.
+* Added manifest file.
+* Updated the commit script to run the doctest runner.
 
 2008.11.10
 
